--- a/node-backend/Dockerfile
+++ b/node-backend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:6.11.1
-RUN mkdir -p /usr/src/app
-WORKDIR /usr/src/app
+RUN mkdir -p /src/app
+WORKDIR /src/app
 
 RUN npm install -g nodemon
 
