--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "6200:6200"
     volumes:
-      - ./node-backend:/src/app
+      - ./node-backend:/usr/src/app
     depends_on:
       - mongodb
   frontend:
@@ -17,6 +17,6 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./react-frontend:/src/app
+      - ./react-frontend:/usr/src/app
     depends_on:
       - backend
