--- a/react-frontend/Dockerfile
+++ b/react-frontend/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:6.11.1
-RUN mkdir -p /src/app
-WORKDIR /src/app
+RUN mkdir -p /usr/src/app
+WORKDIR /usr/src/app
 
 EXPOSE 3000
 CMD [ "npm", "start" ]
