--- a/node-backend/Dockerfile
+++ b/node-backend/Dockerfile
@@ -1,7 +1,9 @@
-FROM node:6.11.1
+FROM node:8.12.0
 RUN mkdir -p /usr/src/app
 WORKDIR /usr/src/app
 
+RUN node -v
+RUN npm -v
 RUN npm install -g nodemon
 
 EXPOSE 3000
